# ideas-about-ai

./: .gitignore  app.py  constants.py  pyproject.toml  requirements.txt
