[tool.poetry]
name = "ai-for-social-good"
version = "0.1.0"
description = ""
authors = ["itsthomashere <thomasadam.leigh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "0.28.1"
langchain = "^0.1.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
streamlit = "^1.30.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
